src/test/BadAnnotations/BadAnnotations.expected
error: BadAnnotations.panda:1:1: @self may not be used together with @class
error: BadAnnotations.panda:1:1: @override may not be used together with @class
error: BadAnnotations.panda:1:1: @thread may not be used together with @class
error: BadAnnotations.panda:1:1: @limited may not be used together with @self
error: BadAnnotations.panda:9:1: annotation '@class' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@thread' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@external' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@override' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@math(overflow)' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@limited' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@self' is not supported on classes
error: BadAnnotations.panda:9:1: annotation '@safeReturn' is not supported on classes
12 errors
