src/test/BadAnnotations/BadAnnotations.panda
@class
@thread
@external
@override
@math(overflow)
@limited
@self
@safeReturn
class Foo {
}